--- a/meli-mobile-challenge/meli-mobile-challenge/Supporting File/Info.plist
+++ b/meli-mobile-challenge/meli-mobile-challenge/Supporting File/Info.plist
@@ -71,5 +71,10 @@
     <array>
         <string>Harabara Mais Demo.otf</string>
     </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
